# Image-Recommender

./: .gitignore  README.md  images_meta.db  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
image_recommender/: app.py  app1.py  app2.py  app_1input.py  app_3inputs.py  build_embedding_index.py  database.py  hist_similarity.py  loader.py  main.py  query_clip_similar.py  search_pipeline.py  similarity_embedding.py  similarity_phash.py  sql_db_ingest.py  thumbnail_ingest.py  visualize_results.py
image_recommender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
image_recommender/data/: database.py  loader.py
image_recommender/pipeline/: build_embedding_index.py  query_clip_similar.py  search_pipeline.py  visualize_results.py
image_recommender/similarity/: hist_similarity.py  similarity_embedding.py
image_recommender/tools/: bench_clip_batch.py  bench_clip_cache.py  profile_plot.py  profiler.py
tests/: test_clip_batch.py  test_clip_model_cache.py  test_database.py  test_loader.py  test_similarity.py
